overflow fix for textarea

--- a/public/main.css
+++ b/public/main.css
@@ -25,6 +25,7 @@ html, body {
 }
 
 .text-editor:focus {
+    overflow: auto;
     outline: none !important;
     border:1px solid #433949;
     box-shadow: 0 0 10px #39034b;
